rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__create_link_focused_on_ok_80x24.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "  ┌Create Link───────────────────────────────────────────────────────────────┐  ",
        "  │  Type:  (*) Symlink   ( ) Hardlink   ( ) Junction                        │  ",
        "  │  ✗ Hardlink: different drive   ✗ Junction: target is not a directory     │  ",
        "  │                                                                          │  ",
        "  │  Link name:                                                              │  ",
        "  │  /test/dest                                                              │  ",
        "  │  report.docx                                                             │  ",
        "  │                                                                          │  ",
        "  │  Target (what it points to):                                             │  ",
        "  │  /test/report.docx  (file)                                               │  ",
        "  │                             [*OK*]  [Cancel]                             │  ",
        "  └──────────────────────────────────────────────────────────────────────────┘  ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 3, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 14, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 3, y: 7, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 5, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 26, y: 7, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 56, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 75, y: 7, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 3, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 5, y: 8, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 75, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 3, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 3, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 5, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 75, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 3, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 5, y: 11, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 75, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 3, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 5, y: 12, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 75, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 3, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 3, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 5, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 75, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 3, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 5, y: 15, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 75, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 77, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 32, y: 16, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 38, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 78, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
